integration tests for requests management simulation, status - in progress